--- a/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmpleadoIndividual.xhtml
@@ -48,7 +48,7 @@
 
                         <fieldset style="position: absolute; left: 10px; top: 65px; font-size: 11px; width: 835px; height: 165px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>#{msg['datospersonales']}</strong></legend>
-                            <p:commandButton id="btnFoto" value="" style="background-image: url(resources/ArchivosCargados/52784280.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 105px; height: 120px " onclick="subirFoto.show();" process="@this"/>
+                            <p:graphicImage id="btnFoto" value="#{controlEmpleadoIndividual.fotoEmpleado}" height="120" width="105" alt="Foto empleado" onclick="subirFoto.show();"/>
                             <h:outputText id="apellidosNombres" value="#{msg['apellidosynombre']}" style="position: absolute; left: 121px; font-weight: bold; color: #14388B" />
                             <p:tooltip for="apellidosNombres" value="#{msg['apellidosynombreTT']}"/>
                             <p:inputText id="primerApellido" value="#{controlEmpleadoIndividual.empleado.persona.primerapellido}" style="position: absolute; left: 223px; top: 11px; width: 138px; text-transform: uppercase" onclick="select();">
@@ -504,7 +504,7 @@
                         <h:outputText value="#{msg['latabla']} #{controlEmpleadoIndividual.nombreTabla} #{msg['errorObjetosDB']}" style="position: absolute; left: 70px; top: 10px; width: 185px; font-weight:bold;" />
                     </p:dialog>
 
-                    <p:dialog id="subirFoto" header="#{msg['subirfotoempleado']}" widgetVar="subirFoto"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
+                    <p:dialog id="subirFoto" header="#{msg['subirfotoempleado']}" widgetVar="subirFoto"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="true">  
                         <p:inputText id="nombreArchivo" value="" readonly="true" style="position:  absolute; top: 40px; left: 8px; font-size: 11px; width: 117px; z-index: 1;"/>
                         <p:watermark for="nombreArchivo" value="#{msg['nombrearchivo']}" />
                         <p:fileUpload  id="FileUp" mode="advanced" style="font-size: 11px;" fileUploadListener="#{controlEmpleadoIndividual.subirFotoEmpleado}"
