--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -399,8 +399,8 @@
                                 <h:outputText style="position: absolute;  font-weight: bold; font-size: 11px; left: 343px; top: 39px; width: 500px; text-align: right; color: #BF1A1A" value="#{msg['periodoeneltiempodesde']} #{controlRemoto.fechaDesde} #{msg['hasta']} #{controlRemoto.fechaHasta} #{msg['corteal']} #{controlRemoto.fechaSistema}"/>
 
 
-                                <fieldset style="position: absolute; border-radius: 10px; width: 800px; height: 120px; top: 49px">
-                                    <legend style="; font-weight: bold; color: #00F;">#{msg['propiedadesdenomina']}</legend>
+                                <fieldset style="position: absolute; border-radius: 10px; width: 800px; height: 120px; top: 49px;">
+                                    <legend style="font-weight: bold; color: #00F;">#{msg['propiedadesdenomina']}</legend>
                                     <h:outputText  id="lblNovedadesNomina" style="position: absolute; left: 22px; top: 112px;  font-weight: bold; text-align: center; width: 150px;" value="#{msg['novedadesdenomina']}"/>
                                     <h:outputText  id="lblConceptosNomina" style="position: absolute; left: 228px; top: 112px;  font-weight: bold; text-align: center; width: 150px;"  value="#{msg['conceptosdenomina']}"/>
                                     <h:outputText id="lblFormulasLiquidacion" style="position: absolute; left: 439px; top: 112px;  font-weight: bold; text-align: center; width: 150px;"  value="#{msg['formulasdeliquidacion']}"/>
