--- a/DesignerRHN/DesignerRHN-war/web/emplviajero.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplviajero.xhtml
@@ -123,7 +123,7 @@
                         <h:outputText id="informacionRegistro" value="#{controlVigenciasViajeros.infoRegistro}" style="position: absolute; left: 15px; top: 470px; font-weight: bold"/>
 
                         <p:commandButton style=" position: absolute; left: 688px; top: 470px;  " icon="ui-icon-check" id="ACEPTAR" value="Aceptar" disabled="#{controlVigenciasViajeros.guardado}"  actionListener="#{controlVigenciasViajeros.revisarDialogoGuardar()}"     process="@this"   />
-                        <p:commandButton style=" position: absolute; left: 785px; top: 470px;  " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" action="nomina" value="Atras"     />
+                        <p:commandButton style=" position: absolute; left: 775px; top: 470px;  " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" action="nomina" value="Cancelar"/>
 
                         <p:dialog header="Tipos Viajeros" widgetVar="sucursalesDialogo" draggable="false" resizable="false" closable="false" id="sucursalesDialogo"  
                                   showEffect="fade" hideEffect="fade" width="470" modal="true" style="">
